--- a/week1_intro_to_python.ipynb
+++ b/week1_intro_to_python.ipynb
@@ -154,7 +154,7 @@
         "**1.1)** You're up. Using the variables, calculate the area of the circles defined\n",
         "below and figure out which circle is larger. Print the result to the console. Area=pi*r^2\n",
         "\n",
-        "[Here's](https://www.jpl.nasa.gov/edu/news/2016/3/16/how-many-decimals-of-pi-do-we-really-need/) a cool article about the precision of pi used in the code for interplanetary navegation. :)"
+        "[Here's](https://www.jpl.nasa.gov/edu/news/2016/3/16/how-many-decimals-of-pi-do-we-really-need/) a cool article about the precision of pi used in the code for interplanetary navigation. :)"
       ]
     },
     {
