--- a/week1_intro_to_python.ipynb
+++ b/week1_intro_to_python.ipynb
@@ -4,14 +4,7 @@
   "metadata": {
     "colab": {
       "name": "week1_intro_to_python.ipynb",
-      "provenance": [],
-      "collapsed_sections": [
-        "oym5-FtJuif9",
-        "4olvm05ptc3f",
-        "CUxrLJY4xDru",
-        "5ezyKoyD5ZT_",
-        "GKxfE_YK5lCD"
-      ]
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -82,7 +75,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f6e3c032-6d47-4d7a-f3aa-39acae7994b3"
+        "outputId": "a493ce42-eccf-4147-ffa6-dba09d5c41bd"
       },
       "source": [
         "# Surprise, surprise. Python can store numbers.\n",
@@ -93,7 +86,7 @@
         "total_animals_in_zoo= pandas + zebras\n",
         "print(total_animals_in_zoo)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +132,7 @@
         "print(3<2)\n",
         "print(10<=20)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +215,7 @@
         "# In python, it depends on your style. In other languages, you can only use\n",
         "# double quotes and single quotes can only declare individual characters. "
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +265,7 @@
         "print(my_str)\n",
         "print(my_str.upper())"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +406,7 @@
         "else:\n",
         "  print(\"Animal unidentified\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,7 +494,7 @@
         "print(1 in my_list)\n",
         "print(43 in my_list)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,7 +738,7 @@
         "\n",
         "print(list_shorter_10_elements(my_list))"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,6 +810,7 @@
         "###### YOUR CODE HERE ########\n",
         "\n",
         "def list_max(lst):\n",
+        "\n",
         "\n",
         "\n",
         "####### min_list here #########"
@@ -903,7 +897,7 @@
         "print(10 % 2)\n",
         "print(11 % 2)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1085,198 +1079,7 @@
         "#### YOUR CODE HERE #######\n",
         "def convert(str, num):"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4pzg5JHTqsWI",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Mini-Project\n",
-        "\n",
-        "In this part, I'm providing some of the code and you have to write some of the code.\n",
-        "\n",
-        "It is your job to complete the code for a program that counts and prints the frequency of words in a chapter of a book. The chapter of the book is represented as a list of strings (e.g. ['This', 'is', 'an', 'example']). The list does not contain any punctuation. The words in the list may contain uppercase letters but all variations of upper and lower case letter are treated equally. For example, the word 'Apple' is equvialent to the word 'apple' and the word 'APPle'. Your code will iterate over the list of words and add them to a dictionary where the key is the word and the value is the frequency of the word in the list.\n",
-        "\n",
-        "You'll find it useful to come up with a testing list where you know the correct value of the frequency of all the words in the list to test your code."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MCslt-kgsc6B",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "alice_chapter_one = \"\"\"Alice was beginning to get very tired of sitting by her sister on the bank, and of having \n",
-        "nothing to do: once or twice she had peeped into the book her sister was reading, but it had \n",
-        "no pictures or conversations in it, 'and what is the use of a book,' thought Alice 'without\n",
-        "pictures or conversation?'\n",
-        "So she was considering in her own mind (as well as she could, for the hot day made her\n",
-        "feel very sleepy and stupid), whether the pleasure of making a daisy-chain would be worth \n",
-        "the trouble of getting up and picking the daisies, when suddenly a White Rabbit with pink\n",
-        "eyes ran close by her.\n",
-        "There was nothing so VERY remarkable in that; nor did Alice think it so VERY much\n",
-        "out of the way to hear the Rabbit say to itself, 'Oh dear! Oh dear! I shall be late!' (when she\n",
-        "thought it over afterwards, it occurred to her that she ought to have wondered at this, but at\n",
-        "the time it all seemed quite natural); but when the Rabbit actually TOOK A WATCH OUT\n",
-        "OF ITS WAISTCOAT-POCKET, and looked at it, and then hurried on, Alice started to her\n",
-        "feet, for it flashed across her mind that she had never before seen a rabbit with either a\n",
-        "waistcoat-pocket, or a watch to take out of it, and burning with curiosity, she ran across the\n",
-        "field after it, and fortunately was just in time to see it pop down a large rabbit-hole under\n",
-        "the hedge.\n",
-        "In another moment down went Alice after it, never once considering how in the world\n",
-        "she was to get out again.\n",
-        "The rabbit-hole went straight on like a tunnel for some way, and then dipped suddenly\n",
-        "down, so suddenly that Alice had not a moment to think about stopping herself before she\n",
-        "found herself falling down a very deep well.\n",
-        "Either the well was very deep, or she fell very slowly, for she had plenty of time as she\n",
-        "went down to look about her and to wonder what was going to happen next. First, she tried\n",
-        "to look down and make out what she was coming to, but it was too dark to see anything;\n",
-        "then she looked at the sides of the well, and noticed that they were filled with cupboards\n",
-        "and book-shelves; here and there she saw maps and pictures hung upon pegs. She took\n",
-        "down a jar from one of the shelves as she passed; it was labelled 'ORANGE\n",
-        "MARMALADE', but to her great disappointment it was empty: she did not like to drop the\n",
-        "jar for fear of killing somebody, so managed to put it into one of the cupboards as she fell\n",
-        "past it.\n",
-        "'Well!' thought Alice to herself, 'after such a fall as this, I shall think nothing of tumbling\n",
-        "down stairs! How brave they'll all think me at home! Why, I wouldn't say anything about it,\n",
-        "even if I fell off the top of the house!' (Which was very likely true.)\n",
-        "Down, down, down. Would the fall NEVER come to an end! 'I wonder how many miles\n",
-        "I've fallen by this time?' she said aloud. 'I must be getting somewhere near the centre of the\n",
-        "earth. Let me see: that would be four thousand miles down, I think—' (for, you see, Alice\n",
-        "had learnt several things of this sort in her lessons in the schoolroom, and though this was\n",
-        "not a VERY good opportunity for showing off her knowledge, as there was no one to listen\n",
-        "to her, still it was good practice to say it over) '—yes, that's about the right distance—but\n",
-        "then I wonder what Latitude or Longitude I've got to?' (Alice had no idea what Latitude\n",
-        "was, or Longitude either, but thought they were nice grand words to say.)\n",
-        "Presently she began again. 'I wonder if I shall fall right THROUGH the earth! How funny\n",
-        "it'll seem to come out among the people that walk with their heads downward! The\n",
-        "Antipathies, I think—' (she was rather glad there WAS no one listening, this time, as it\n",
-        "didn't sound at all the right word) '—but I shall have to ask them what the name of the\n",
-        "country is, you know. Please, Ma'am, is this New Zealand or Australia?' (and she tried to\n",
-        "curtsey as she spoke—fancy CURTSEYING as you're falling through the air! Do you think \n",
-        "you could manage it?) 'And what an ignorant little girl she'll think me for asking! No, it'll\n",
-        "never do to ask: perhaps I shall see it written up somewhere.'\n",
-        "Down, down, down. There was nothing else to do, so Alice soon began talking again.\n",
-        "'Dinah'll miss me very much to-night, I should think!' (Dinah was the cat.) 'I hope they'll\n",
-        "remember her saucer of milk at tea-time. Dinah my dear! I wish you were down here with\n",
-        "me! There are no mice in the air, I'm afraid, but you might catch a bat, and that's very like a\n",
-        "mouse, you know. But do cats eat bats, I wonder?' And here Alice began to get rather\n",
-        "sleepy, and went on saying to herself, in a dreamy sort of way, 'Do cats eat bats? Do cats eat\n",
-        "bats?' and sometimes, 'Do bats eat cats?' for, you see, as she couldn't answer either question,\n",
-        "it didn't much matter which way she put it. She felt that she was dozing off, and had just\n",
-        "begun to dream that she was walking hand in hand with Dinah, and saying to her very\n",
-        "earnestly, 'Now, Dinah, tell me the truth: did you ever eat a bat?' when suddenly, thump!\n",
-        "thump! down she came upon a heap of sticks and dry leaves, and the fall was over.\n",
-        "Alice was not a bit hurt, and she jumped up on to her feet in a moment: she looked up,\n",
-        "but it was all dark overhead; before her was another long passage, and the White Rabbit was\n",
-        "still in sight, hurrying down it. There was not a moment to be lost: away went Alice like the\n",
-        "wind, and was just in time to hear it say, as it turned a corner, 'Oh my ears and whiskers,\n",
-        "how late it's getting!' She was close behind it when she turned the corner, but the Rabbit\n",
-        "was no longer to be seen: she found herself in a long, low hall, which was lit up by a row of\n",
-        "lamps hanging from the roof.\n",
-        "There were doors all round the hall, but they were all locked; and when Alice had been\n",
-        "all the way down one side and up the other, trying every door, she walked sadly down the\n",
-        "middle, wondering how she was ever to get out again.\n",
-        "Suddenly she came upon a little three-legged table, all made of solid glass; there was\n",
-        "nothing on it except a tiny golden key, and Alice's first thought was that it might belong to\n",
-        "one of the doors of the hall; but, alas! either the locks were too large, or the key was too\n",
-        "small, but at any rate it would not open any of them. However, on the second time round,\n",
-        "she came upon a low curtain she had not noticed before, and behind it was a little door\n",
-        "about fifteen inches high: she tried the little golden key in the lock, and to her great delight\n",
-        "it fitted!\n",
-        "Alice opened the door and found that it led into a small passage, not much larger than a\n",
-        "rat-hole: she knelt down and looked along the passage into the loveliest garden you ever\n",
-        "saw. How she longed to get out of that dark hall, and wander about among those beds of\n",
-        "bright flowers and those cool fountains, but she could not even get her head through the\n",
-        "doorway; 'and even if my head would go through,' thought poor Alice, 'it would be of very\n",
-        "little use without my shoulders. Oh, how I wish I could shut up like a telescope! I think I\n",
-        "could, if I only know how to begin.' For, you see, so many out-of-the-way things had\n",
-        "happened lately, that Alice had begun to think that very few things indeed were really\n",
-        "impossible.\n",
-        "There seemed to be no use in waiting by the little door, so she went back to the table, half\n",
-        "hoping she might find another key on it, or at any rate a book of rules for shutting people up\n",
-        "like telescopes: this time she found a little bottle on it, ('which certainly was not here \n",
-        "before,' said Alice,) and round the neck of the bottle was a paper label, with the words\n",
-        "'DRINK ME' beautifully printed on it in large letters.\n",
-        "It was all very well to say 'Drink me,' but the wise little Alice was not going to do THAT\n",
-        "in a hurry. 'No, I'll look first,' she said, 'and see whether it's marked \"poison\" or not'; for she\n",
-        "had read several nice little histories about children who had got burnt, and eaten up by wild\n",
-        "beasts and other unpleasant things, all because they WOULD not remember the simple rules\n",
-        "their friends had taught them: such as, that a red-hot poker will burn you if you hold it too\n",
-        "long; and that if you cut your finger VERY deeply with a knife, it usually bleeds; and she\n",
-        "had never forgotten that, if you drink much from a bottle marked 'poison,' it is almost\n",
-        "certain to disagree with you, sooner or later.\n",
-        "However, this bottle was NOT marked 'poison,' so Alice ventured to taste it, and finding\n",
-        "it very nice, (it had, in fact, a sort of mixed flavour of cherry-tart, custard, pine-apple, roast\n",
-        "turkey, toffee, and hot buttered toast,) she very soon finished it off.\n",
-        "'What a curious feeling!' said Alice; 'I must be shutting up like a telescope.'\n",
-        "And so it was indeed: she was now only ten inches high, and her face brightened up at the\n",
-        "thought that she was now the right size for going through the little door into that lovely\n",
-        "garden. First, however, she waited for a few minutes to see if she was going to shrink any\n",
-        "further: she felt a little nervous about this; 'for it might end, you know,' said Alice to herself,\n",
-        "'in my going out altogether, like a candle. I wonder what I should be like then?' And she\n",
-        "tried to fancy what the flame of a candle is like after the candle is blown out, for she could\n",
-        "not remember ever having seen such a thing.\n",
-        "After a while, finding that nothing more happened, she decided on going into the garden\n",
-        "at once; but, alas for poor Alice! when she got to the door, she found she had forgotten the\n",
-        "little golden key, and when she went back to the table for it, she found she could not\n",
-        "possibly reach it: she could see it quite plainly through the glass, and she tried her best to\n",
-        "climb up one of the legs of the table, but it was too slippery; and when she had tired herself\n",
-        "out with trying, the poor little thing sat down and cried.\n",
-        "'Come, there's no use in crying like that!' said Alice to herself, rather sharply; 'I advise\n",
-        "you to leave off this minute!' She generally gave herself very good advice, (though she very\n",
-        "seldom followed it), and sometimes she scolded herself so severely as to bring tears into her\n",
-        "eyes; and once she remembered trying to box her own ears for having cheated herself in a\n",
-        "game of croquet she was playing against herself, for this curious child was very fond of\n",
-        "pretending to be two people. 'But it's no use now,' thought poor Alice, 'to pretend to be two\n",
-        "people! Why, there's hardly enough of me left to make ONE respectable person!'\n",
-        "Soon her eye fell on a little glass box that was lying under the table: she opened it, and\n",
-        "found in it a very small cake, on which the words 'EAT ME' were beautifully marked in \n",
-        "currants. 'Well, I'll eat it,' said Alice, 'and if it makes me grow larger, I can reach the key;\n",
-        "and if it makes me grow smaller, I can creep under the door; so either way I'll get into the\n",
-        "garden, and I don't care which happens!'\n",
-        "She ate a little bit, and said anxiously to herself, 'Which way? Which way?', holding her\n",
-        "hand on the top of her head to feel which way it was growing, and she was quite surprised\n",
-        "to find that she remained the same size: to be sure, this generally happens when one eats\n",
-        "cake, but Alice had got so much into the way of expecting nothing but out-of-the-way\n",
-        "things to happen, that it seemed quite dull and stupid for life to go on in the common way.\n",
-        "So she set to work, and very soon finished off the cake. \"\"\""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6H0vtiDYuoSw",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n",
-        "punctuations = '''!()-[]{};:'\"\\,<>./?@#$%^&*_~'''\n",
-        "\n",
-        "# Removes punctuation from the string\n",
-        "no_punct = \"\"\n",
-        "for char in alice_chapter_one:\n",
-        "   if char not in punctuations:\n",
-        "       no_punct = no_punct + char\n",
-        "\n",
-        "alice_chapter_one = no_punct\n",
-        "\n",
-        "print(alice_chapter_one)\n",
-        "# Splits the string into a list of strings\n",
-        "alice_chapter_one = alice_chapter_one.split()\n",
-        "\n",
-        "print(len(alice_chapter_one))"
-      ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     }
   ]
